--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -20,8 +20,17 @@
     &__center
         height: 4px
 .title
-    font-size: 34px
-    color: $dark
-    text-align: center
+    font-size: 33px
     line-height: 42px
     margin: 0
+    &--primary
+        color: $dark
+.clear
+    clear: both
+=p
+    font-family: 'Lato', sans-serif
+    font-weight: normal
+    font-size: 15px
+    line-height: 22px
+=max
+    max-width: 705px
