--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,6 +8,9 @@
 
 @import 'template/header'
 @import 'template/typography'
+@import 'template/content'
+@import 'template/blockquotes'
+@import 'template/table'
 
 @import 'template/footer'
 
