--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -11,6 +11,7 @@
 @import 'template/content'
 @import 'template/blockquotes'
 @import 'template/table'
+@import 'template/blog'
 
 @import 'template/footer'
 
