--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -12,6 +12,7 @@
 @import 'template/blockquotes'
 @import 'template/table'
 @import 'template/blog'
+@import 'template/post'
 
 @import 'template/footer'
 
